<resources>
    <string name="app_name">TeamsStats</string>
    <string name="ResponseLimit">Исчерпан лимит запросов. Попробуйте позднее</string>
    <string name="H2HMatches">Матчи \n между собой</string>
    <string name="home_team_matches">Матчи \n 1 команды дома</string>
    <string name="away_team_matches">Матчи \n 2 команды на выезде</string>
    <string name="last_home_team_matches">Последние матчи \n 1 команды</string>
    <string name="last_away_team_matches">Последние матчи \n 2 команды</string>
    <string name="SearchButton">Поиск</string>
    <string name="HomeTeamList">Дома</string>
    <string name="ResultH2HList">Результат</string>
    <string name="AwayTeamList">В гостях</string>
    <string name="league_champions">Лига \n чемпионов</string>
    <string name="bundes_liga">Лига \n Германии</string>
    <string name="premier_league">Лига \n Англии</string>
    <string name="liga_a">Лига \n Италии</string>
    <string name="ligue_1">Лига \n Франции</string>
    <string name="eredivisie">Лига \n Голландии</string>
    <string name="primera_division">Лига \n Испании</string>
    <string name="primera_liga">Лига \n Португалии</string>
    <string name="next_matches">Вывести матчи на ближайщую неделю</string>
    <string name="statistic">Статистика</string>
    <string name="turnament_table">Показать \n турнирную таблицу</string>
    <string name="tournament_table">Турнирная таблица</string>
    <string name="home_game_tournament_table">Турнирная таблица \n игры дома</string>
    <string name="away_game_tournament_table">Турнирная таблица \n игры на выезде</string>
</resources>