<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/matchHomeTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/HomeTeamList"
        />

    <TextView
        android:id="@+id/matchResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/ResultH2HList"
        />

    <TextView
        android:id="@+id/matchAwayTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/AwayTeamList"
        />

</LinearLayout>